--- a/DoesTheDogDie/Configuration/config.html
+++ b/DoesTheDogDie/Configuration/config.html
@@ -1,63 +1,64 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
     <title>Does The Dog Die Integration</title>
 </head>
 <body>
-    <div class="configPage">
-        <h1>Does The Dog Die Integration</h1>
-        <form class="pluginConfigurationForm">
-            <div class="configSection">
-                <h2>API Key</h2>
-                <p>Get your API key from <a href="https://www.doesthedogdie.com/keys" target="_blank">doesthedogdie.com</a></p>
-                <div class="inputContainer">
-                    <input type="text" id="txtApiKey" name="txtApiKey" class="textInput" />
-                </div>
+    <div id="DoesTheDogDieConfigPage" data-role="page" class="page type-interior pluginConfigurationPage" data-require="emby-input,emby-button,emby-textarea">
+        <div data-role="content">
+            <div class="content-primary">
+                <h1>Does The Dog Die Integration</h1>
+                <form id="DoesTheDogDieConfigForm">
+                    <div class="inputContainer">
+                        <label class="inputLabel inputLabelUnfocused" for="txtApiKey">API Key</label>
+                        <input id="txtApiKey" name="txtApiKey" type="text" is="emby-input" />
+                        <div class="fieldDescription">Get your API key from <a href="https://www.doesthedogdie.com/keys" target="_blank">doesthedogdie.com</a></div>
+                    </div>
+                    <div class="inputContainer">
+                        <label class="inputLabel inputLabelUnfocused" for="txtTriggers">Triggers</label>
+                        <textarea id="txtTriggers" name="txtTriggers" is="emby-textarea" rows="10"></textarea>
+                        <div class="fieldDescription">Enter a list of triggers to block, one per line.</div>
+                    </div>
+                    <div>
+                        <button is="emby-button" type="submit" class="raised button-submit block emby-button">
+                            <span>Save</span>
+                        </button>
+                    </div>
+                </form>
             </div>
-            <div class="configSection">
-                <h2>Triggers</h2>
-                <p>Enter a list of triggers to block, one per line.</p>
-                <div class="inputContainer">
-                    <textarea id="txtTriggers" name="txtTriggers" rows="10" class="textarea"></textarea>
-                </div>
-            </div>
-            <br />
-            <button type="submit" class="button-submit">Save</button>
-        </form>
-    </div>
+        </div>
+        <script type="text/javascript">
+            var DoesTheDogDieConfig = {
+                pluginUniqueId: '0b881525-a8f2-416b-9b3b-10ab164cd3c8'
+            };
 
-    <script>
-        const pluginId = "0b881525-a8f2-416b-9b3b-10ab164cd3c8";
-
-        function loadConfig() {
-            ApiClient.getPluginConfiguration(pluginId).then(function (config) {
-                document.getElementById('txtApiKey').value = config.ApiKey || '';
-                document.getElementById('txtTriggers').value = config.Triggers || '';
-            });
-        }
-
-        function saveConfig(form) {
-            ApiClient.getPluginConfiguration(pluginId).then(function (config) {
-                config.ApiKey = form.querySelector('#txtApiKey').value;
-                config.Triggers = form.querySelector('#txtTriggers').value;
-                ApiClient.updatePluginConfiguration(pluginId, config).then(function (result) {
-                    Dashboard.alert({
-                        message: 'Configuration saved!',
-                        type: 'success'
+            document.querySelector('#DoesTheDogDieConfigPage')
+                .addEventListener('pageshow', function() {
+                    Dashboard.showLoadingMsg();
+                    ApiClient.getPluginConfiguration(DoesTheDogDieConfig.pluginUniqueId).then(function (config) {
+                        document.querySelector('#txtApiKey').value = config.ApiKey || '';
+                        document.querySelector('#txtTriggers').value = config.Triggers || '';
+                        Dashboard.hideLoadingMsg();
                     });
                 });
-            });
-            return false; // Prevent default form submission
-        }
 
-        document.addEventListener('DOMContentLoaded', function () {
-            loadConfig();
-        });
+            document.querySelector('#DoesTheDogDieConfigForm')
+                .addEventListener('submit', function(e) {
+                    Dashboard.showLoadingMsg();
+                    ApiClient.getPluginConfiguration(DoesTheDogDieConfig.pluginUniqueId).then(function (config) {
+                        config.ApiKey = document.querySelector('#txtApiKey').value;
+                        config.Triggers = document.querySelector('#txtTriggers').value;
+                        ApiClient.updatePluginConfiguration(DoesTheDogDieConfig.pluginUniqueId, config).then(function (result) {
+                            Dashboard.processPluginConfigurationUpdateResult(result);
+                        });
+                    });
 
-        document.querySelector('.pluginConfigurationForm').addEventListener('submit', function () {
-            saveConfig(this);
-        });
-    </script>
+                    e.preventDefault();
+                    return false;
+                });
+        </script>
+    </div>
 </body>
 </html>
